# SATERYS

./: .gitignore  DEVELOPER_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PLUGIN_API_SUMMARY.md  README.md  pyproject.toml  test_manual_labeler.py  test_new_features.py
.github/workflows/: publish.yml
data/cache/: vector-test2.geojson
docs/: LLM_CHAT_FEATURE.md  ai-features.md  api.md  getting-started.md  manual-labeler.md  plugin-api.md  plugins.md  vector-features.md
examples/: README.md
examples/01_basic/: hello_world.py  numeric_operations.py
examples/02_geospatial/: ndvi_calculation.py
examples/03_manual_labeling/: README.md  advanced_labeling.py  basic_labeling.py  create_sample_data.py
examples/03_vector/: README.md  test_integration.py  vector_drawing_demo.py  vector_drawing_example.py
examples/03_vector_and_ai/: README.md  line_example.json  point_example.json  polygon_example.json
flows/: AI Demo Workflow.json
plugins/saterys_plugin_starter/: README.md  __init__.py  pyproject.toml  setup.py
saterys/: ai_service.py  app.py  llm_chat.py  llm_service.py
saterys.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
saterys/nodes/: elevation_profile.py  ollama_ai.py  vector_create.py  vector_input.py
saterys/server/: __init__.py  bootstrap.py  plugins.py
saterys/static/: index.html
saterys/static/assets/: ContrastTheme-BKASlD28.js  ContrastTheme-BPfd7GIm.js  Controls-3r3r0iOH.js  (+122 more)
saterys/web/: index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
tests/: __init__.py  test_plugins.py
(+14 files in other folders)
